--- a/style.css
+++ b/style.css
@@ -8,9 +8,12 @@ html {
 }
 
 body {
-  background: radial-gradient(#b6ecba 5px, 
-      whitesmoke 10px 65px, #b6ecba 1px );
-  background-size: 100px 100px 
+  background: radial-gradient(#b6ecba 5px, whitesmoke 10px 65px, #b6ecba 1px);
+  background-size: 100px 100px;
+
+  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='36' height='43' viewport='0 0 100 100' style='fill:black;font-size:22px;'><text y='50%'>🍤</text></svg>")
+      16 0,
+    auto; /*!emojicursor.app*/
 }
 
 h1,
